--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <div class="half" >
                 <div class="prof-info">
-                    <h2 style="font-size: 2.5rem;">Hi! <span class="hi">👋</span></h2>
+                    <h2 style="font-size: 2.5rem;">Hello! <span class="hi">👋</span></h2>
                     <h3>I'm Jebastin Michael Raj,</h3>
                     <h3 style="font-size: 2rem;">Junior Software Developer;</h3>
                     <p style="text-align: justify;">"A passionate individual who is dedicated to continuous learning and staying abreast of emerging technologies. Possesses strong computing knowledge and is a self-driven learner committed to professional growth"</p>
