--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <div class="logo"></div>
-        <a href="#" class="toggle-button"><i class="fa-solid fa-bars"></i></a>
+        <a href="JavaScript:void(0)" class="toggle-button"><i class="fa-solid fa-bars"></i></a>
         <div class="nav-links">
             <ul>
                 <li><a href="#profile">Profile</a></li>
