--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
 
     <!-- about me -->
-    <section class="hero-sec wave"id="profile"style="padding: 100px 0px;">
+    <section class="hero-sec wave"id="profile"style="padding: 100px 0px;display: flex;">
         <div class="profile-wrapper div-wrapper  w-900 m-90">
             <div class="half hero-half">
                 <div class="prof-img">
@@ -96,7 +96,7 @@
                 <div class="feature-box">
                     <div class="fb-icon"><i class="fa fa-university" aria-hidden="true"></i></div>
                     <h2>H S C: Computer Science and Maths</h2>
-                    <p><b>2017-2018</b> - Jhon Bosco Higher Secondary School, Kovilpatti.</p>
+                    <p><b>2018-2019</b> - Jhon Bosco Higher Secondary School, Kovilpatti.</p>
                     <p>Aggregate Percentage: <b><i>66%</i></b></p>
                 </div>
                 <div class="feature-box">
