--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="year-1">
                         <span>1.5</span>
                     </div>
-                    <h3>Years of <span>Experience</span></h3>
+                    <h3><span>Years of Experience</span></h3>
                 </div>
                 <div class="exp-details half">
 				    <p> <ul class="per-li">
