--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <h2 style="font-size: 2.5rem;">Hello! <span class="hi">👋</span></h2>
                     <h3>I'm Jebastin Michael Raj,</h3>
                     <h3 style="font-size: 2rem;">Senior Software Developer</h3>
-                    <p style="text-align: justify;">A passionate individual who is dedicated to continuous learning and staying abreast of emerging technologies. Possesses strong computing knowledge and is a self-driven learner committed to professional growth</p>
+                    <p style="text-align: justify;">A passionate individual who is dedicated to continuous learning and staying abreast of emerging technologies. Possesses strong computing knowledge and is a self-driven learner committed to professional growth .</p>
                     <div class="cont-icons">
                         <a href="https://www.linkedin.com/in/jebastin-michael-raj" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="https://github.com/JebastinMichaelRaj" target="_blank"><i class="fa-brands fa-github"></i></a>
@@ -60,7 +60,7 @@
                 </div>
                 <div class="exp-details half">
 				    <p> <ul class="per-li">
-					<li><span>Experienced Full Stack Developer with in MSSQL, .NET, ASP.NET, C#, and Azure App development. 
+					<li><span>Experienced Full Stack Developer proficient in MSSQL, .NET, ASP.NET, C#, and Azure App development. 
 					Skilled in UI design with CSS, HTML, ASP.NET, and React. 
 					Proficient in front-end development using JavaScript, HTML, CSS, Bootstrap, and jQuery.</span>
 					</li>
@@ -89,8 +89,8 @@
             <div class="feature-wrapper" style="margin-bottom: 60px;">
                 <div class="feature-box">
                     <div class="fb-icon"><i class="fa fa-university" aria-hidden="true"></i></div>
-                    <h2>Bachelor of computer Science</h2>
-                    <p><b>2019 -2022</b> - The SSDM College, Kovilpatti.</p>
+                    <h2>Bachelor of Computer Science</h2>
+                    <p><b>2019 -2022</b> - SSDM College, Kovilpatti.</p>
                     <p>Aggregate Percentage: <b><i>80%</i></b></p>
                 </div>
                 <div class="feature-box">
@@ -127,7 +127,7 @@
                 <img src="Image/html-5.png"class="image" alt="">
 				<span>HTML</span>
 			     <div class="overlay">
-				<div class="certif_text">Font-end developing certificated by</div>
+				<div class="certif_text">Front-end development certified by</div>
                    <div class="text"><img src="Image/csc.png" alt=""></div>
                  </div>			 
 			</div>
@@ -136,7 +136,7 @@
                 <img src="Image/css-3.png"class="image" alt="">
 				<span>CSS</span>
 			     <div class="overlay">
-				<div class="certif_text">Font-end developing certificated by</div>
+				<div class="certif_text">Front-end development certified by</div>
                    <div class="text"><img src="Image/csc.png" alt=""></div>
                  </div>			 
 			</div>
@@ -146,7 +146,7 @@
                  <img src="Image/C++.jpg" class="image" alt="">  
 				<span>C++</span>
 			    <div class="overlay">
-				<div class="certif_text">Back-end developing certificated by</div>
+				<div class="certif_text">Back-end development certified by</div>
                    <div class="text"><img src="Image/csc.png" alt=""></div>
                  </div>			 		 
 			</div>
@@ -154,7 +154,7 @@
 			<div class="container icon-box">           
                <img src="Image/python.jpg" class="image" alt=""><span>python</span> 
 			    <div class="overlay">
-				<div class="certif_text">Back-end developing certificated by</div>
+				<div class="certif_text">Back-end development certified by</div>
                    <div class="text"><img src="Image/csc.png" alt=""></div>
                  </div>			 
 			</div>
