--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 		
 		   
             <div class="icon-box">
-                <img src="Image/server.png" alt=""><span>Full stack Developing</span>
+                <img src="Image/fsd.png" alt=""><span>Full stack Developing</span>
             </div>
             <div class="icon-box">
                 <img src="Image/html-5.png" alt=""><span>HTML</span>
@@ -183,8 +183,13 @@
             </div>
             <div class="icon-box">
                 <img src="Image/js.png" alt=""><span>JavaScript</span>
-            </div>           
-			
+            </div> 
+            <div class="icon-box">
+                <img src="Image/jquery.png" alt=""><span>jQuery</span>
+            </div>           			
+			 <div class="icon-box">
+                <img src="Image/react.png" alt=""><span>React js</span>
+            </div> 
 			 <div class="icon-box">
                 <img src="Image/C++.jpg" alt=""><span>C++</span> 
              </div> 
@@ -200,6 +205,9 @@
             </div>
             <div class="icon-box">
                 <img src="Image/ASP.net.jpg" alt=""><span>ASP.NET</span>
+            </div>
+			 <div class="icon-box">
+                <img src="Image/VS.png" alt=""><span>Visual Studio</span>
             </div>
 			 <div class="icon-box">
                 <img src="Image/sql.jpg" alt=""><span>SQL Sever</span>
