--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 <img src="Image/ASP.net.jpg" alt=""><span>ASP.NET</span>
             </div>
 			 <div class="icon-box">
-                <img src="Image/VS.png" alt=""><span>Visual Studio</span>
+                <img src="Image/vs.png" alt=""><span>Visual Studio</span>
             </div>
 			 <div class="icon-box">
                 <img src="Image/sql.jpg" alt=""><span>SQL Sever</span>
